test_suite5/ALAN/test_suite/alan-2022-examples/failing/004370_mutation.alan
source G8 begin leave < (264) end
